<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/bg_login"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_otp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint"
        android:background="@color/white"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="number"
        android:maxLength="6"/>

    <Button
        android:id="@+id/btnSendOTP"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/btn_login_bg"
        android:textColor="@color/btn_login"
        android:text="@string/action_send_otp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnGoBack"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/btn_login_bg"
        android:textColor="@color/btn_login"
        android:text="@string/action_goback"
        android:textStyle="bold" />

</LinearLayout>