<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/bg_login"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:id="@+id/payment_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/card_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_card_type"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:background="@color/white"
            android:imeActionId="@+id/pay"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="text"/>

        <EditText
            android:id="@+id/card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_card_number"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:background="@color/white"
            android:imeActionId="@+id/pay"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="number"/>


        <EditText
            android:id="@+id/card_expiration_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_card_expiration_date"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:background="@color/white"
            android:imeActionId="@+id/pay"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="date"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/card_CVV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_card_CVV"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:background="@color/white"
            android:imeActionId="@+id/pay"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnPay"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/btn_login_bg"
            android:textColor="@color/btn_login"
            android:text="@string/action_pay"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnGoBack"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/btn_login_bg"
            android:textColor="@color/btn_login"
            android:text="@string/action_goback"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>
